[gd_scene load_steps=3 format=3 uid="uid://blc5mfiw70f2"]

[ext_resource type="Script" path="res://menu.gd" id="1_50igi"]
[ext_resource type="Texture2D" uid="uid://bx2bed8b533un" path="res://art_assets/many_skisse.png" id="2_qdi1i"]

[node name="Menu" type="Node"]
script = ExtResource("1_50igi")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1600.0
offset_bottom = 720.0
texture = ExtResource("2_qdi1i")
expand_mode = 1

[node name="StartButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 216.0
offset_top = 221.0
offset_right = 860.0
offset_bottom = 369.0
rotation = -0.167094
action_mode = 0

[node name="SettingsButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 543.0
offset_top = 348.0
offset_right = 1217.0
offset_bottom = 459.0
rotation = -0.031911
action_mode = 0

[node name="QuitButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 242.0
offset_top = 591.0
offset_right = 924.0
offset_bottom = 704.0
rotation = -0.183988
action_mode = 0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
